[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "qtypes"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://gitlab.com/yaq/qtypes"
description-file = "README.md"
requires = ["qtpy",
	    "pint",
	    ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/qtypes"
Issues = "https://gitlab.com/yaq/qtypes/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]
test = ["pyside2>=5.12", "pytest"]

[tool.black]
line-length = 99
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
